--- a/symbolic_computing/Assignment.ipynb
+++ b/symbolic_computing/Assignment.ipynb
@@ -119,11 +119,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sympy import symbols, expand, factor, simplify, diff, integrate, solve,det,Matrix"
+    "from sympy import symbols, simplify, diff, solve,det,Matrix"
    ]
   },
   {
